	renaming of the file, removed some dead code, and fixed a bug
	where TclBignumToDouble failed on huge negative numbers.
	* tests/binary.test (binary-65.*): Added missing 'ieeeFloatingPoint' to
	large/small significand tests.
	* tests/expr.test (expr-45.*) Added missing braces around expressions.
	
2005-08-24  Don Porter  <dgp@users.sourceforge.net>

	[kennykb-numerics-branch]

	* generic/tclExecute.c:	Bug fix: TclBignumToDouble return -Inf when
	appropriate.  Removed declarations of removed routines.

	* generic/tclExecute.c:	Revised the type promotion rules of the
	comparison operators so that they form proper equivalence classes
	over the set of numeric strings.

2005-08-23  Kevin Kenny  <kennykb@users.sourceforge.net>

	[kennykb-numerics-branch]
	
	* generic/tclCmdMZ.c (Tcl_StringObjCmd):
	* generic/tclInt.h:
	* generic/tclObj.c (Tcl_GetBooleanFromObj, SetDoubleFromAny,
	Tcl_GetLongFromObj, Tcl_GetWideIntFromObj, Tcl_GetBignumFromObj):
	* generic/tclParseExpr.c (GetLexeme):
	* generic/tclScan.c (Tcl_ScanObjCmd):
	* generic/tclStrToD.c (TclParseNumber):
	* tests/binary.test (binary-62.1-65.7):
	* tests/expr.test (expr-40.1-42.1):
	* scan.test (scan-14.1,14.2):
	Modified Tcl_ParseNumber to accept an argument to force
	interpretation as decimal, and modified [scan] to use it.
	Corrected a bug where Not a Number with hexadecimal information
	bits returned consistently incorrect values. #ifdef-ed out
	some code that is needed only for IBM hexadecimal floating point.
	Fixed bugs in code to handle the corner cases of smallest and
	largest significands.  Added test cases to improve test coverage
	in generic/tclStrToD.c.	Added test cases for 0b notation (TIP
	#114).  Removed TclStrToD, and the static functions that it calls,
	which are now dead code (TclParseNumber	now does all input 
	floating-point conversions.)
	
2005-08-23  Don Porter  <dgp@users.sourceforge.net>

	[kennykb-numerics-branch]

	* generic/tclStrToD.c:	Bug fix: set shift magnitude properly whether